# rag-pipeline

./: .env.example  .gitignore  main.py  pyproject.toml
app/: history_aware_generation.py  ingestion_pipeline.py  retrieval_pipeline.py  semantic_chunking.py
app/custom_model/: gemini.py
docs/: google.txt  isro.txt  microsoft.txt  nvidia.txt  spacex  spacex.txt  tesla.txt  upi.txt
scratch/: analyze_docs.py  list_embedding_models.py  list_models.py
